@@ -1,10 +1,18 @@
 package pretzel.dreamketcherbe.domain.webtoon.service;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -31,19 +39,26 @@ import pretzel.dreamketcherbe.domain.member.exception.MemberExceptionType;
 import pretzel.dreamketcherbe.domain.member.repository.InterestedWebtoonRepository;
 import pretzel.dreamketcherbe.domain.member.repository.MemberRepository;
 import pretzel.dreamketcherbe.domain.member.service.MemberService;
-import pretzel.dreamketcherbe.domain.webtoon.dto.*;
+import pretzel.dreamketcherbe.domain.webtoon.dto.CreateWebtoonReqDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.CreateWebtoonResDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.MyWebtoonResDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.SearchedWebtoonPageResDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.SearchedWebtoonResDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.UpdateWebtoonReqDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.WebtoonDetailResDto;
+import pretzel.dreamketcherbe.domain.webtoon.dto.WebtoonResDto;
 import pretzel.dreamketcherbe.domain.webtoon.entity.Genre;
+import pretzel.dreamketcherbe.domain.webtoon.entity.Tag;
 import pretzel.dreamketcherbe.domain.webtoon.entity.Webtoon;
 import pretzel.dreamketcherbe.domain.webtoon.entity.WebtoonStatus;
 import pretzel.dreamketcherbe.domain.webtoon.exception.WebtoonException;
 import pretzel.dreamketcherbe.domain.webtoon.exception.WebtoonExceptionType;
 import pretzel.dreamketcherbe.domain.webtoon.repository.GenreRepository;
+import pretzel.dreamketcherbe.domain.webtoon.repository.TagRepository;
 import pretzel.dreamketcherbe.domain.webtoon.repository.WebtoonRepository;
+import pretzel.dreamketcherbe.domain.webtoon.repository.WebtoonTagRepository;
 
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
+@Slf4j
 @Service
 @AllArgsConstructor
 public class WebtoonService {
@@ -77,6 +92,10 @@ public class WebtoonService {
     private final RecommentRecommendationRepository recommentRecomendationRepository;
 
     private final RecommentNotRecommendationRepository recommentNotRecommendationRepository;
+
+    private final TagRepository tagRepository;
+
+    private final WebtoonTagRepository webtoonTagRepository;
 
     private final MemberService memberService;
 
@@ -133,6 +152,19 @@ public class WebtoonService {
     }
 
     /**
+     * 에피소드 카운트
+     */
+    @Transactional
+    public void getEpisodeCount(Long webtoonId) {
+        Webtoon findWebtoon = webtoonRepository.findById(webtoonId)
+            .orElseThrow(() -> new WebtoonException(WebtoonExceptionType.WEBTOON_NOT_FOUND));
+
+        int count = episodeRepository.CountByWebtoonId(webtoonId);
+        findWebtoon.incrementEpisodeCount(count);
+        webtoonRepository.save(findWebtoon);
+    }
+
+    /**
      * 웹툰 등록
      */
     @Transactional
@@ -145,6 +177,14 @@ public class WebtoonService {
 
         Webtoon newWebtoon = Webtoon.addOf(request, findMember, genre);
         webtoonRepository.save(newWebtoon);
+
+        List<String> tagContents = parseTagString(request.tagsInput());
+        for (String content : tagContents) {
+            Tag tag = tagRepository.findByContent(content)
+                .orElseGet(() -> tagRepository.save(new Tag(content)));
+
+            newWebtoon.addTag(tag);
+        }
 
         ManagementWebtoon managementWebtoon = ManagementWebtoon.addOf(newWebtoon);
         managementWebtoonRespository.save(managementWebtoon);
@@ -218,6 +258,7 @@ public class WebtoonService {
     /**
      * 웹툰 수정
      */
+    @Transactional
     public void updateWebtoon(Long memberId, Long webtoonId, UpdateWebtoonReqDto request) {
         Member findMember = memberRepository.findById(memberId)
             .orElseThrow(() -> new MemberException(MemberExceptionType.MEMBER_NOT_FOUND));
@@ -225,7 +266,10 @@ public class WebtoonService {
         Webtoon findWebtoon = webtoonRepository.findById(webtoonId)
             .orElseThrow(() -> new WebtoonException(WebtoonExceptionType.WEBTOON_NOT_FOUND));
 
+        findWebtoon.isAuthor(memberId);
+
         findWebtoon.updateOf(request);
+        updateTags(findWebtoon, request.tagsInput());
 
         webtoonRepository.save(findWebtoon);
     }
@@ -243,6 +287,7 @@ public class WebtoonService {
             .orElseThrow(() -> new WebtoonException(WebtoonExceptionType.WEBTOON_NOT_FOUND));
 
         findWebtoon.isAuthor(memberId);
+        getEpisodeCount(webtoonId);
         List<Long> episodeIds = episodeRepository.findByWebtoonId(webtoonId);
 
         if (episodeIds.isEmpty()) {
@@ -260,7 +305,7 @@ public class WebtoonService {
         episodeLikeRepository.deleteByEpisode(episodeIds);
         episodeRepository.deleteByWebtoonId(webtoonId);
 
-        List<Long> commentIds = commentRepository.findByEpisodeId(episodeIds);
+        List<Long> commentIds = commentRepository.findByEpisodeIds(episodeIds);
         recommendationRepository.deleteByComment(commentIds);
         notRecommendationRepository.deleteByComment(commentIds);
         commentRepository.deleteByEpisodeId(episodeIds);
@@ -324,21 +369,39 @@ public class WebtoonService {
     }
 
     /**
+     * 웹툰 상세 조회
+     */
+    public WebtoonDetailResDto getWebtoonDetail(Long webtoonId) {
+        Webtoon findWebtoon = webtoonRepository.findById(webtoonId)
+            .orElseThrow(() -> new WebtoonException(WebtoonExceptionType.WEBTOON_NOT_FOUND));
+
+        return WebtoonDetailResDto.from(findWebtoon);
+    }
+
+    /**
      * 웹툰, 작가 검색
      */
-    public List<SearchedWebtoonResDto> searchWebtoon(String keyword) {
+    public SearchedWebtoonPageResDto searchWebtoon(
+        String keyword, boolean fromFirst, int page, int size) {
+
         if (keyword == null || keyword.trim().isEmpty()) {
             throw new WebtoonException(WebtoonExceptionType.SEARCH_KEYWORD_NOT_FOUND);
         }
 
         String normalizedKeyword = keyword.trim().toLowerCase();
-        List<Webtoon> webtoons = webtoonRepository.findByTitleOrMemberNickname(normalizedKeyword);
 
-        if (webtoons.isEmpty()) {
-            return List.of();
+        // fromFirst 값에 따라 정렬 기준 지정 (예시로 id 기준 오름차순/내림차순)
+        Sort sort = fromFirst ? Sort.by("id").ascending() : Sort.by("id").descending();
+        PageRequest pageable = PageRequest.of(page, size, sort);
+
+        Page<Webtoon> webtoonPage = webtoonRepository.findByTitleOrMemberNickname(normalizedKeyword,
+            pageable);
+
+        if (webtoonPage.isEmpty()) {
+            return SearchedWebtoonPageResDto.of(Collections.emptyList(), page, 0, 0);
         }
 
-        List<Long> webtoonIds = webtoons.stream()
+        List<Long> webtoonIds = webtoonPage.getContent().stream()
             .map(Webtoon::getId)
             .collect(Collectors.toList());
 
@@ -349,12 +412,77 @@ public class WebtoonService {
                 obj -> (Long) obj[1]
             ));
 
-        return webtoons.stream()
+        List<SearchedWebtoonResDto> results = webtoonPage.getContent().stream()
             .map(webtoon -> SearchedWebtoonResDto.of(
                 webtoon,
                 webtoon.getGenre().getName(),
                 webtoonIdToStars.getOrDefault(webtoon.getId(), 0L)
             ))
             .collect(Collectors.toList());
+
+        return SearchedWebtoonPageResDto.of(
+            results,
+            webtoonPage.getNumber(),
+            webtoonPage.getTotalPages(),
+            (int) webtoonPage.getTotalElements()
+        );
     }
+
+    /**
+     * 태그 수정
+     */
+    @Transactional
+    public void updateTags(Webtoon webtoon, String tagsInput) {
+        Map<String, Long> oldTagMap = webtoon.getWebtoonTags()
+            .stream()
+            .collect(Collectors.toMap(
+                wt -> wt.getTag().getContent(),
+                wt -> wt.getTag().getId()
+            ));
+
+        Set<String> newTagNames = new HashSet<>(parseTagString(tagsInput));
+
+        Set<String> tagsToRemove = oldTagMap.keySet().stream()
+            .filter(oldTag -> !newTagNames.contains(oldTag))
+            .collect(Collectors.toSet());
+
+        Set<String> tagsToAdd = newTagNames.stream()
+            .filter(newTag -> !oldTagMap.containsKey(newTag))
+            .collect(Collectors.toSet());
+
+        for (String content : tagsToRemove) {
+            Tag tag = tagRepository.findById(oldTagMap.get(content))
+                .orElseThrow(() -> new WebtoonException(WebtoonExceptionType.TAG_NOT_FOUND));
+            webtoon.removeTag(tag);
+        }
+
+        for (String content : tagsToAdd) {
+            Tag tag = tagRepository.findByContent(content)
+                .orElseGet(() -> tagRepository.save(new Tag(content)));
+
+            if (webtoon.getWebtoonTags().stream()
+                .noneMatch(wt -> wt.getTag().getId().equals(tag.getId()))) {
+                webtoon.addTag(tag);
+            }
+        }
+    }
+
+    /**
+     * 해시태그 입력 파싱 "#로맨스 #액션" -> ["로맨스", "액션"]
+     */
+    private List<String> parseTagString(String tagsInput) {
+        if (tagsInput == null || tagsInput.isEmpty()) {
+            return List.of();
+        }
+
+        return List.of(tagsInput.split("\\s+"))
+            .stream()
+            .map(tag -> tag.replace("#", "").trim())
+            .filter(tag -> !tag.isEmpty())
+            .distinct()
+            .collect(Collectors.toList());
+    }
+
+    //TODO: 태그 검색 Service 추가
+
 }
